NewArchive/260cbe9cc6e521f543b3f9f773552e7e-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:44:34: error: conversion from 'int*' to non-scalar type 'main()::<anonymous struct>' requested
    struct {}_ = ns::id(ns::ref {});
                                  ^
